# agent-code

./: .gitignore  AGENTS.md  README.md  big.txt  checklist.md  plan.md  pyproject.toml  spec.md  task.md
.agentcode/: config.yaml.example
.agents/skills/mew-spec/: SKILL.md
src/agentcode/: __init__.py  __main__.py  cli.py  config.py  context.py  conversation.py  memory.py  permission.py  prompt.py  resource_loader.py  session.py  session_store.py
src/agentcode/agent/: __init__.py
src/agentcode/llm/: __init__.py  anthropic_provider.py  openai_provider.py
src/agentcode/mcp/: __init__.py  config.py  manager.py  tool.py
src/agentcode/terminal/: __init__.py  app.py  commands.py  view.py
src/agentcode/tool/: __init__.py  bash.py  edit_file.py  glob_tool.py  grep_tool.py  ls_tool.py  read_file.py  write_file.py
src/agentcode/tui/: __init__.py  app.py  input.py  scrollbar.py  view.py
tests/: test_agent.py  test_cli.py  test_config.py  test_context.py  test_conversation.py  test_llm.py  test_mcp_config.py  test_mcp_manager.py  test_mcp_tool.py  test_memory.py  test_permission.py  test_prompt.py  test_resource_loader.py  test_session_store.py  test_slash_commands.py  test_terminal.py  test_tool.py  test_tui.py
